@@ -3,116 +3,113 @@ package com.example.popspotbackend.service;
 import com.example.popspotbackend.dto.CalendarPopupDto;
 import com.example.popspotbackend.entity.PopupStore;
 import com.example.popspotbackend.repository.PopupStoreRepository;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.util.List;
-import java.util.stream.Collectors;
-
+/**
+ * 팝업스토어 공개 조회 / 검색 / 캘린더 / 상세.
+ *
+ * <p>공개 가능 여부({@link #isPublic}) 는 두 가지 축을 모두 본다: {@code status} (PENDING / EXPIRED 제외)와 {@code
+ * reviewStatus} ({@code AUTO_PUBLISHED} / {@code APPROVED} 만 허용, 레거시 수동 데이터는 null 통과).
+ */
 @Service
 @RequiredArgsConstructor
 public class PopupStoreService {
 
+    private static final String CATEGORY_ALL = "ALL";
+
+    private static final String STATUS_PENDING = "PENDING";
+    private static final String STATUS_EXPIRED = "EXPIRED";
+
+    private static final String REVIEW_AUTO_PUBLISHED = "AUTO_PUBLISHED";
+    private static final String REVIEW_APPROVED = "APPROVED";
+
+    private static final int TRENDING_TOP_N = 4;
+    private static final int DEFAULT_CALENDAR_WINDOW_DAYS = 60;
+
     private final PopupStoreRepository popupStoreRepository;
 
-    /**
-     * [로직 해석] 팝업스토어 전체 또는 카테고리별 목록을 조회하는 핵심 로직입니다.
-     * 컨트롤러에서 'category' 값을 받아와서 판단합니다.
-     * * @param category 사용자가 선택한 카테고리 (예: "FASHION", "FOOD", "ALL" 또는 null)
-     * @return 조건에 맞는 팝업스토어 리스트
-     */
+    /** 카테고리 필터링이 들어오면 해당 카테고리만, 아니면 전체 공개 팝업. */
     public List<PopupStore> getAllPopups(String category) {
-        List<PopupStore> allPopups;
-
-        // 1. 카테고리 값이 아예 없거나(null), 빈 문자열("")이거나, "ALL"이라고 요청한 경우
-        if (category == null || category.isEmpty() || "ALL".equalsIgnoreCase(category)) {
-            // [V4] PENDING/EXPIRED + PENDING_REVIEW/REJECTED/TAKEDOWN 모두 한 번에 거르는 통합 필터.
-            allPopups = popupStoreRepository.findAllPublic();
-        } else {
-            // 2. 특정 카테고리(예: "FASHION")가 넘어온 경우
-            allPopups = popupStoreRepository.findByCategory(category.toUpperCase());
-        }
-
-        // 🔥 [추가 필터링] PENDING/EXPIRED + 검수 미통과/takedown 모두 거름.
-        return allPopups.stream()
-                .filter(this::isPublic)
-                .collect(Collectors.toList());
+        List<PopupStore> popups =
+                isAllCategory(category)
+                        ? popupStoreRepository.findAllPublic()
+                        : popupStoreRepository.findByCategory(category.toUpperCase());
+        return popups.stream().filter(this::isPublic).toList();
     }
 
-    /**
-     * 캘린더 — 시작일이 from~to 사이거나, 행사 기간이 from~to 와 겹치는 팝업.
-     * fromDate/toDate 는 ISO YYYY-MM-DD.
-     */
+    /** 키워드가 이름 / 위치에 포함된 팝업 (공개 가능한 것만). */
+    public List<PopupStore> searchPopups(String keyword) {
+        return popupStoreRepository
+                .findByNameContainingOrLocationContaining(keyword, keyword)
+                .stream()
+                .filter(this::isPublic)
+                .toList();
+    }
+
+    /** 인기 팝업 Top {@value #TRENDING_TOP_N}. DB 단에서 정렬 + LIMIT 으로 성능 보장. */
+    @Transactional(readOnly = true)
+    public List<PopupStore> getTrendingPopups() {
+        return popupStoreRepository.findTrendingPublic(PageRequest.of(0, TRENDING_TOP_N));
+    }
+
+    /** 상세 페이지 진입 시 viewCount 1 증가 후 반환. */
+    @Transactional
+    public PopupStore getPopupById(Long id) {
+        PopupStore popup =
+                popupStoreRepository
+                        .findById(id)
+                        .orElseThrow(() -> new RuntimeException("팝업을 찾을 수 없습니다. ID: " + id));
+        int currentViews = popup.getViewCount() != null ? popup.getViewCount() : 0;
+        popup.setViewCount(currentViews + 1);
+        return popup;
+    }
+
+    /** 캘린더 — 행사 기간이 [from, to] 와 겹치는 공개 팝업. 파라미터 생략 시 오늘 ~ 60일 후. */
     @Transactional(readOnly = true)
     public List<CalendarPopupDto> getCalendar(String fromDate, String toDate) {
-        // 안전 — 파라미터 없으면 오늘 ~ 60일 후
         LocalDate from = parseOrDefault(fromDate, LocalDate.now());
-        LocalDate to   = parseOrDefault(toDate,   from.plusDays(60));
-        if (to.isBefore(from)) to = from.plusDays(60);
+        LocalDate to = parseOrDefault(toDate, from.plusDays(DEFAULT_CALENDAR_WINDOW_DAYS));
+        if (to.isBefore(from)) to = from.plusDays(DEFAULT_CALENDAR_WINDOW_DAYS);
 
-        List<PopupStore> popups = popupStoreRepository.findCalendarRange(
-                from.format(DateTimeFormatter.ISO_LOCAL_DATE),
-                to.format(DateTimeFormatter.ISO_LOCAL_DATE)
-        );
-        return popups.stream()
+        return popupStoreRepository
+                .findCalendarRange(
+                        from.format(DateTimeFormatter.ISO_LOCAL_DATE),
+                        to.format(DateTimeFormatter.ISO_LOCAL_DATE))
+                .stream()
                 .filter(this::isPublic)
                 .map(CalendarPopupDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /** 공개 가능 여부 통합 판정 */
+    /* ============================== 내부 헬퍼 ============================== */
+
+    private boolean isAllCategory(String category) {
+        return category == null || category.isEmpty() || CATEGORY_ALL.equalsIgnoreCase(category);
+    }
+
     private boolean isPublic(PopupStore p) {
-        if (p.getStatus() != null && (p.getStatus().equals("PENDING") || p.getStatus().equals("EXPIRED"))) {
-            return false;
-        }
+        if (isHiddenStatus(p.getStatus())) return false;
         String rs = p.getReviewStatus();
-        if (rs == null) return true;     // legacy manual 데이터
-        return rs.equals("AUTO_PUBLISHED") || rs.equals("APPROVED");
+        if (rs == null) return true;
+        return REVIEW_AUTO_PUBLISHED.equals(rs) || REVIEW_APPROVED.equals(rs);
+    }
+
+    private boolean isHiddenStatus(String status) {
+        return STATUS_PENDING.equals(status) || STATUS_EXPIRED.equals(status);
     }
 
     private LocalDate parseOrDefault(String iso, LocalDate fallback) {
         if (iso == null || iso.isBlank()) return fallback;
-        try { return LocalDate.parse(iso, DateTimeFormatter.ISO_LOCAL_DATE); }
-        catch (Exception e) { return fallback; }
-    }
-
-    /**
-     * [로직 해석] 특정 ID를 가진 팝업스토어 1개의 상세 정보를 가져옵니다.
-     * 상세 페이지(Detail Page)에서 사용됩니다.
-     */
-    // 🔥 [수정됨] 상세 페이지 들어올 때마다 조회수(viewCount) +1 증가 로직 및 @Transactional 추가
-    @Transactional
-    public PopupStore getPopupById(Long id) {
-        PopupStore popup = popupStoreRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("팝업을 찾을 수 없습니다. ID: " + id));
-
-        // 조회수 1 증가 (null 방어)
-        int currentViews = popup.getViewCount() != null ? popup.getViewCount() : 0;
-        popup.setViewCount(currentViews + 1);
-
-        return popup;
-    }
-
-    /**
-     * [로직 해석] 조회수(viewCount)가 가장 높은 상위 4개를 뽑아오는 로직입니다.
-     * 메인 페이지의 '인기 팝업' 섹션에서 사용됩니다.
-     * @Transactional(readOnly = true): 읽기 전용 트랜잭션을 걸어 성능을 최적화합니다.
-     */
-    @Transactional(readOnly = true)
-    public List<PopupStore> getTrendingPopups() {
-        // 🔥 [성능 개선] 메모리에서 필터/정렬 X. DB 단에서 정렬 + LIMIT.
-        // [V4] EXPIRED + PENDING_REVIEW/REJECTED/TAKEDOWN 모두 거른 public 트렌딩.
-        return popupStoreRepository.findTrendingPublic(PageRequest.of(0, 4));
-    }
-
-    public List<PopupStore> searchPopups(String keyword) {
-        // 🔥 [추가 필터링] 검색 결과에서도 비공개 상태 모두 제거.
-        return popupStoreRepository.findByNameContainingOrLocationContaining(keyword, keyword).stream()
-                .filter(this::isPublic)
-                .collect(Collectors.toList());
+        try {
+            return LocalDate.parse(iso, DateTimeFormatter.ISO_LOCAL_DATE);
+        } catch (Exception e) {
+            return fallback;
+        }
     }
 }
